sarissa/src/components/Projects/index.scss
.welcome {
    width: 100%;
    margin-top: 5%;
    margin-left: 15%;

    .projects-welcome-title {
        position: absolute;
        color: #ffffff;
        font-weight: bold;
        width: 50%;
    }

    .projects-welcome-text {
        position: absolute;
        color: #ffffff;
        font-weight: normal;
        width: 50%;
        margin-top: 2.5%;
    }
}

.project-links {
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    margin-left: 100px;
    margin-top: -7.5%;
    
    .project-link,
    .project-link-in-development {

        text-decoration: none;
        opacity: 0;
        animation: fadeInRight 0.5s ease-out forwards;
        width: 100%;
        align-items: center;
        justify-content: center;
        margin-top: 25%;

        .project-image {
            width: 250px;
            border-radius: 50%;
        }

        // project image that is under development
        .project-image-dev {
            width: 200px;
            cursor: default;
            border-radius: 50%;
        }

        .project-image-text {
            color: #ffffff;
            display: block;
            font-size: medium;
            margin-top: 2.5%;
            cursor: default;
        }

        .library-logos {
            justify-content: center;
            width: 100%;
            margin-top: 2.5%;
        }

        .library-logo {
            width: auto;
            margin-left: 10px;
            height: 50px;
        }

        &:nth-child(1) {
            animation-delay: 1.75s;
        }

        &:nth-child(2) {
            animation-delay: 2.25s;
        }

        &:nth-child(3) {
            animation-delay: 2.75s;
        }

        @keyframes fadeInRight {
            to {
                opacity: 1;
                transform: translateX(0);
                /* Move to the original position */
            }
        }


    }


}

.project-image {
    opacity: 0.7;
    transition: opacity 0.25s ease;
}

.project-image:hover {
    opacity: 1;
}


@media (max-width: 850px) {

    .project-links {
        display: flex;
        align-items: center;
        justify-content: center;
        text-align: center;
        margin-left: 100px;
        margin-top: 0%;

        .project-link,
        .project-link-in-development {
            margin-right: 50px;
            text-decoration: none;

            opacity: 0;
            animation: fadeInRight 0.5s ease-out forwards;
            display: inline;
            width: 100%;
            align-items: center;
            justify-content: center;
            margin-top: 25%;

            .project-image {
                width: 150px;
                border-radius: 50%;
            }

            // project image that is under development
            .project-image-dev {
                width: 150px;
                cursor: default;
                border-radius: 50%;
            }

            .project-image-text {
                color: #ffffff;
                display: block;
                font-size: medium;
                margin-top: 2.5%;
                cursor: default;
            }

            .library-logos {
                justify-content: center;
                width: 100%;
                margin-top: 2.5%;
            }

            .library-logo {
                width: auto;
                margin-left: 10px;
                height: 30px;
            }

            &:nth-child(1) {
                animation-delay: 1.75s;
            }

            &:nth-child(2) {
                animation-delay: 2.25s;
            }

            &:nth-child(3) {
                animation-delay: 2.75s;
            }

            @keyframes fadeInRight {
                to {
                    opacity: 1;
                    transform: translateX(0);
                    /* Move to the original position */
                }
            }


        }


    }

}

@media (max-width: 760px) {

    .welcome {

        align-items: center;
        justify-content: center;
        width: 100%;

        .projects-welcome-title {
            color: #ffffff;
            font-weight: normal;
            font-size: large;
            text-align: center;
            width: 80%;
        }

        .projects-welcome-text {
            color: #ffffff;
            font-weight: normal;
            font-size: small;
            text-align: center;
            width: 80%;
        }
    }

    .project-links {

        position: absolute;
        display: grid;
        text-align: center;
        justify-content: center;
        align-items: center;
        top: 20%;

        .project-link,
        .project-link-in-development {

            margin-top: 20px;
            text-decoration: none;

            opacity: 0;
            animation: fadeInRight 0.5s ease-out forwards;
            display: inline;
            width: 100%;
            align-items: center;
            justify-content: center;

            .project-image {
                width: 200px;
                border-radius: 50%;
            }

            // project image that is under development
            .project-image-dev {
                width: 200px;
                cursor: default;
                border-radius: 50%;
            }

            .project-image-text {
                color: #ffffff;
                display: block;
                font-size: small;
                margin-top: 2.5%;
                cursor: default;
            }

            .library-logos {
                justify-content: center;
                width: 100%;
                margin-top: 2.5%;
            }

            .library-logo {
                width: auto;
                margin-left: 10px;
                height: 30px;
            }

            &:nth-child(1) {
                animation-delay: 1.75s;
            }

            &:nth-child(2) {
                animation-delay: 2.25s;
            }

            &:nth-child(3) {
                animation-delay: 2.75s;
            }

            @keyframes fadeInRight {
                to {
                    opacity: 1;
                    transform: translateX(0);
                    /* Move to the original position */
                }
            }


        }


    }

}

